@@ -1,3 +1,12 @@
+2002-05-14  Darin Adler  <darin@apple.com>
+
+	* kwq/KWQListImpl.mm: (KWQListIteratorImpl::KWQListIteratorImpl):
+	Add a missing check for a null pointer.
+
+	* kwq/KWQGuardedPtr.mm: (KWQGuardedPtrBase::KWQGuardedPtrBase):
+	Remove an unnecessary call to "toFirst", because new iterators
+	already default to pointing to the first element of the list.
+
 2002-05-13  Darin Adler  <darin@apple.com>
 
 	* kwq/KWQListImpl.mm: (KWQListImpl::~KWQListImpl): Detach all the iterators from
